# FieldFlux

./: .env.example  .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: database.py  main.py  models.py  requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py
data/: db.json  storage.py
db/models/: farmer.py  field.py  field_history.py
docs/: staging.md
fieldflux/: __init__.py  app.py  telemetry.py
frontend/: app.js  index.html  styles.css
public/: app.js  index.html  main.js  style.css  styles.css
scripts/: seed_data.py
server/: auth.py  database.py  main.py  models.py  schemas.py
src/: audit.js  auth.js  data.js  server.js
tests/: conftest.py  test_app.py  test_auth_api.py
