[project]
name = "fieldflux"
version = "0.1.0"
description = "FieldFlux core utilities and testing harness"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
